# basic-site

./: .gitignore  Cargo.toml  RATIONALE.md  README.md  db.sqlite3  flake.nix  justfile
migrations/: 20250807034207_init.sql  20250807034208_add_user_email.down.sql  20250807034208_add_user_email.up.sql
seeds/: seed.sql
src/: app_state.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  password.rs  session.rs  util.rs
src/api/: mod.rs  server_time.rs
src/extractors/: db_connection.rs  mod.rs  session.rs
src/middleware/: auth.rs
src/models/: invite.rs  session.rs  user.rs
src/services/: job.rs  mod.rs
src/web/: about.rs  home.rs  login.rs  logout.rs  mod.rs  pages.rs  profile.rs  session.rs  settings.rs  signup.rs  templates.rs
src/web/components/: forms.rs  layout.rs  mod.rs
src/web/components/forms/: auth.rs  mod.rs  settings.rs
static/: pico.colors.min.css
templates/: about.html  base.html  home.html  login.html  login_form.html  navbar.html  profile.html  settings.html  settings_password_form.html  settings_username_form.html  signup.html  signup_form.html
tests/: models.rs
