[package]
name = "metanalysis"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.47.1", features = ["full"] }
