[package]
name = "basic_site"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid"] }
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }

arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
mod_module_files = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"
missing_trait_methods = "allow"
